--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -40,22 +40,20 @@
 <mat-sidenav-container class="app-container">
   <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
       <mat-nav-list>
-          <mat-list-item routerLink="/dock-table">
+          <mat-list-item routerLink="/home">
               <mat-icon>dashboard</mat-icon><span> Trackers</span>
           </mat-list-item>
           <mat-expansion-panel [class.mat-elevation-z0]="true">
               <mat-expansion-panel-header>
-                  Inbound
+                  Missed Stops
               </mat-expansion-panel-header>
               <mat-nav-list>
-                  <a mat-list-item routerLink="/ib-shipments">
-                      <mat-icon>local_shipping</mat-icon><span> Scheduled</span>
+                  <a mat-list-item routerLink="/stops-form">
+                      <mat-icon class="list-icon">check_box</mat-icon><span class="drop-icon"> Stops Tracker</span>
                   </a>
+
                   <a mat-list-item routerLink="#">
-                      <mat-icon>done</mat-icon><span> Completed</span>
-                  </a>
-                  <a mat-list-item routerLink="#">
-                    <mat-icon>restore</mat-icon><span> History</span>
+                    <mat-icon class="list-icon">restore</mat-icon><span class="drop-icon"> History</span>
                   </a>
               </mat-nav-list>
           </mat-expansion-panel>
@@ -65,13 +63,10 @@
               </mat-expansion-panel-header>
               <mat-nav-list>
                   <a mat-list-item routerLink="#">
-                  <mat-icon>build</mat-icon><span> In-Progress</span>
+                  <mat-icon class="list-icon">build</mat-icon><span class="drop-icon"> In-Progress</span>
                   </a>
                   <a mat-list-item routerLink="#">
-                    <mat-icon>done</mat-icon><span> Completed</span>
-                  </a>
-                  <a mat-list-item routerLink="#">
-                    <mat-icon>restore</mat-icon><span> History</span>
+                    <mat-icon class="list-icon">restore</mat-icon><span class="drop-icon"> History</span>
                   </a>
               </mat-nav-list>
           </mat-expansion-panel>
@@ -81,13 +76,13 @@
             </mat-expansion-panel-header>
             <mat-nav-list>
                 <a mat-list-item routerLink="#">
-                    <mat-icon></mat-icon><span> Edit Locations</span>
+                    <mat-icon></mat-icon><span class="drop-icon"> Edit Locations</span>
                 </a>
                 <a mat-list-item routerLink="#">
-                    <mat-icon></mat-icon><span> Yard Audit</span>
+                    <mat-icon></mat-icon><span class="drop-icon"> Yard Audit</span>
                 </a>
                 <a mat-list-item routerLink="#">
-                  <mat-icon>restore</mat-icon><span> History</span>
+                  <mat-icon class="list-icon">restore</mat-icon><span class="drop-icon"> History</span>
                 </a>
             </mat-nav-list>
           </mat-expansion-panel>
