--- a/src/app/stops-form/stops-form.component.css
+++ b/src/app/stops-form/stops-form.component.css
@@ -3,11 +3,16 @@
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-left: 7rem;
-  margin-bottom: 1rem;
+  margin-left: 10rem;
+  align-items: center;
+  
+
 
 }
 
 mat-form-field {
+  margin-top: 1rem;
   margin-left: 2rem;
 }
+
+
