Edited for new requirements and use change, updated form.

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -45,15 +45,15 @@
           </mat-list-item>
           <mat-expansion-panel [class.mat-elevation-z0]="true">
               <mat-expansion-panel-header>
-                  Missed Stops
+                  Complex Installs
               </mat-expansion-panel-header>
               <mat-nav-list>
                   <a mat-list-item routerLink="/stops-form">
-                      <mat-icon class="list-icon">check_box</mat-icon><span class="drop-icon"> Stops Tracker</span>
+                      <mat-icon class="list-icon">check_box</mat-icon><span class="drop-icon"> Search Zip</span>
                   </a>
 
                   <a mat-list-item routerLink="#">
-                    <mat-icon class="list-icon">restore</mat-icon><span class="drop-icon"> History</span>
+                    <mat-icon class="list-icon">restore</mat-icon><span class="drop-icon"> Edit Zip</span>
                   </a>
               </mat-nav-list>
           </mat-expansion-panel>
