--- a/src/app/stops-form/stops-form.component.html
+++ b/src/app/stops-form/stops-form.component.html
@@ -1,27 +1,54 @@
 
 <div class="form-wrapper">
-  <form [formGroup]="stopsForm">
+  <form >
     <mat-form-field>
-      <input matInput type="text" pattern="[0-9]*" maxlength="5" placeholder="Zip Code" formControlName="zipCode">
-      <mat-error *ngIf="stopsForm.controls.zipCode.invalid">
+      <input matInput type="text" pattern="[0-9]*" maxlength="5" placeholder="Zip Code" [(ngModel)]="zip" name="zip">
+      <mat-error *ngIf="!zip || (zip.length !==5)">
         Please enter a 5-digit zip code.
       </mat-error>
     </mat-form-field>
-    <!-- <mat-form-field>
-      <input matInput placeholder="Driver" formControlName="driverName">
-    </mat-form-field>
-    <mat-form-field>
-      <input type="number" matInput placeholder="Total Stops" formControlName="totalStops">
-      <mat-error *ngIf="stopsForm.controls.totalStops.invalid">
-        Please enter a number.
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <input type="number" matInput placeholder="Completed Stops" formControlName="completedStops">
-      <mat-error *ngIf="stopsForm.controls.completedStops.invalid">
-        Please enter a number.
-      </mat-error>
-    </mat-form-field> -->
+    <button (click)="onSubmit()" color="primary" mat-raised-button type="submit">Search</button>
   </form>
-  <button color="primary" mat-button (click)="onSubmit()">Search</button>
-</div>
+
+  <!-- data-table.component.html -->
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Replace 'id', 'name', 'email' with your API response keys -->
+  <ng-container matColumnDef="Zip Code">
+    <th mat-header-cell *matHeaderCellDef>Zip Code</th>
+    <td mat-cell *matCellDef="let row">{{ row.home_delivery_zip }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="City">
+    <th mat-header-cell *matHeaderCellDef>City</th>
+    <td mat-cell *matCellDef="let row">{{ row.city }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="State">
+    <th mat-header-cell *matHeaderCellDef>State</th>
+    <td mat-cell *matCellDef="let row">{{ row.state }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="County">
+    <th mat-header-cell *matHeaderCellDef>County</th>
+    <td mat-cell *matCellDef="let row">{{ row.county }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="Dishwasher">
+    <th mat-header-cell *matHeaderCellDef>Dishwasher</th>
+    <td mat-cell *matCellDef="let row">{{ row.dishwasher }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="Gas Dryer">
+    <th mat-header-cell *matHeaderCellDef>Gas Dryer</th>
+    <td mat-cell *matCellDef="let row">{{ row.gas_dryer }}</td>
+  </ng-container>
+
+
+  <!-- Add more column definitions as needed -->
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
