Refactor code for improved performance

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -39,7 +39,7 @@
                   Complex Installs
               </mat-expansion-panel-header>
               <mat-nav-list>
-                  <a mat-list-item routerLink="/stops-form">
+                  <a mat-list-item routerLink="/zip-form">
                       <mat-icon class="list-icon">check_box</mat-icon><span class="drop-icon"> Search Zip</span>
                   </a>
 
