Add zip-change component and routing

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -43,7 +43,7 @@
                       <mat-icon class="list-icon">check_box</mat-icon><span class="drop-icon"> Search Zip</span>
                   </a>
 
-                  <a mat-list-item routerLink="#">
+                  <a mat-list-item routerLink="/zip-edit">
                     <mat-icon class="list-icon">restore</mat-icon><span class="drop-icon"> Edit Zip</span>
                   </a>
               </mat-nav-list>
